--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,16 +24,9 @@
 		"declarationMap": true,
 		"baseUrl": "./src",
 		"paths": {
-			"@/*": [
-				"./*"
-			]
+			"@/*": ["./*"]
 		}
 	},
-	"include": [
-		"src/**/*"
-	],
-	"exclude": [
-		"node_modules",
-		"dist"
-	]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist"]
 }
