--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"dist"
 	],
 	"scripts": {
-		"dev": "tsc -w",
+		"dev": "vitest",
 		"build": "tsc",
 		"ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run test",
 		"format": "prettier --write .",
